# open-hypergraphs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
examples/: adder.rs  matching_trace.rs  polycirc.rs  serde.rs  serde_example.rs
examples/serde/: .gitignore  Cargo.toml
examples/serde/src/: main.rs
src/: eval.rs  functor.rs  layer.rs  lib.rs  operations.rs  partition.rs  union_find.rs
src/array/: mod.rs  traits.rs  vec.rs
src/category/: mod.rs  spider.rs  traits.rs
src/finite_function/: arrow.rs  indexed_coproduct.rs  mod.rs  semifinite.rs  types.rs
src/functor/: frobenius.rs  mod.rs  optic.rs  spider.rs
src/hypergraph/: arrow.rs  mod.rs  object.rs
src/indexed_coproduct/: arrow.rs  iterator.rs  mod.rs  semifinite_iterator.rs
src/lax/: category.rs  csp.rs  functor.rs  hypergraph.rs  matching.rs  mod.rs  mut_category.rs  open_hypergraph.rs  optic.rs  rewrite.rs  subgraph.rs  test_utils.rs
src/open_hypergraph/: arrow.rs  mod.rs
src/relaxed/: hypergraph.rs  mod.rs  open_hypergraph.rs
src/semifinite/: arrow.rs  mod.rs  types.rs
src/strict/: eval.rs  graph.rs  isomorphism.rs  layer.rs  mod.rs
tests/: eval.rs  lib.rs  polycirc.rs  serde_tests.rs  test_array.rs  test_layer.rs
tests/eval/: eval.rs
tests/finite_function/: mod.rs  strategy.rs  test_category.rs  test_coequalizer.rs  test_constructor.rs  test_coproduct.rs  test_symmetric_monoidal.rs
tests/functor/: mod.rs  test_functor.rs  test_optic.rs
tests/graph/: mod.rs  test_graph.rs
tests/hypergraph/: equality.rs  mod.rs  strategy.rs  test_arrow.rs  test_constructor.rs  (+1 more)
(+58 files in other folders)
