[package]
name = "open-hypergraphs"
version = "0.2.0"
edition = "2021"
description = "Data-Parallel Algorithms for Open Hypergraphs"
license = "MIT"
repository = "https://github.com/hellas-ai/open-hypergraphs"
documentation = "https://docs.rs/open-hypergraphs"

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
proptest = "1.6.0"
