[package]
name = "open-hypergraphs"
version = "0.2.4"
edition = "2021"
description = "Data-Parallel Algorithms for Open Hypergraphs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hellas-ai/open-hypergraphs"
documentation = "https://docs.rs/open-hypergraphs"

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
proptest = "1.6.0"
serde_json = "1.0"
