[package]
name = "example-open-hypergraphs-serde"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
graphviz-rust = "0.9.5"
open-hypergraphs = { version = "0.2.5", features = ["serde"]  }
open-hypergraphs-dot = "0.2.1"
serde = "1.0.225"
serde_json = "1.0.145"

[patch.crates-io]
open-hypergraphs = { path = "../../" }
